--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    background-color: lightgray;
+    font-family: 'Cabin Sketch', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+    font-family: 'Space Grotesk', sans-serif;
+}
+
+.black-text-shadow {
+    text-shadow: 3px 3px 2px rgba(0, 0, 0, 1);
+}
